// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSwitcher should render the rgb switcher correctly 1`] = `
<div
  className="color-switcher"
>
  <div
    className="color red active"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color green"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color blue"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color yellow"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color pink"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color purple"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color warm"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color neutral"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color cold"
    onClick={[Function]}
  >
    <div />
  </div>
</div>
`;

exports[`ColorSwitcher should render the white switcher correctly 1`] = `
<div
  className="color-switcher white"
>
  <div
    className="color neutral active"
  >
    <div />
  </div>
</div>
`;

exports[`ColorSwitcher should render the white-spectrum switcher correctly 1`] = `
<div
  className="color-switcher spectrum"
>
  <div
    className="color warm active"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color neutral"
    onClick={[Function]}
  >
    <div />
  </div>
  <div
    className="color cold"
    onClick={[Function]}
  >
    <div />
  </div>
</div>
`;
